--- a/font.css
+++ b/font.css
@@ -1,7 +1,7 @@
 @font-face {
     font-family: 'bastard';
-    src: url('/font/newspaper.woff2') format('woff2'),
-        url('/font/newspaper.woff') format('woff');
+    src: url('font/newspaper.woff2') format('woff2'),
+        url('font/newspaper.woff') format('woff');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
